Navigation consistency changes. Linux CI/CD build fix.

--- a/lib/l10n/arb/app_ar.arb
+++ b/lib/l10n/arb/app_ar.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "حذف الدورة؟",
   "courses_dialog_markCompletedMessage": "سيتم وضع علامة على الدورة كمكتملة بتاريخ اليوم. هل تريد المتابعة؟",
   "courses_dialog_markCompletedTitle": "وضع علامة كمكتمل؟",
+  "courses_empty_button": "أضف أول دورة تدريبية",
   "courses_empty_noCompleted": "لا توجد دورات مكتملة",
   "courses_empty_noInProgress": "لا توجد دورات قيد التنفيذ",
   "courses_empty_subtitle": "أضف أول دورة للبدء",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "لديك تغييرات غير محفوظة. هل تريد تجاهلها؟",
   "diveCenters_dialog_discardTitle": "تجاهل التغييرات؟",
   "diveCenters_dialog_keepEditing": "متابعة التعديل",
+  "diveCenters_empty_button": "أضف أول مركز غوص",
   "diveCenters_empty_subtitle": "أضف متاجر ومشغلي الغوص المفضلين لديك",
   "diveCenters_empty_title": "لا توجد مراكز غوص بعد",
   "diveCenters_error_generic": "خطأ: {error}",
