--- a/lib/l10n/arb/app_de.arb
+++ b/lib/l10n/arb/app_de.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "Kurs löschen?",
   "courses_dialog_markCompletedMessage": "Dies markiert den Kurs als abgeschlossen mit dem heutigen Datum. Fortfahren?",
   "courses_dialog_markCompletedTitle": "Als abgeschlossen markieren?",
+  "courses_empty_button": "Ersten Ausbildungskurs hinzufügen",
   "courses_empty_noCompleted": "Keine abgeschlossenen Kurse",
   "courses_empty_noInProgress": "Keine laufenden Kurse",
   "courses_empty_subtitle": "Fügen Sie Ihren ersten Kurs hinzu, um zu beginnen",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "Sie haben nicht gespeicherte Änderungen. Möchten Sie diese wirklich verwerfen?",
   "diveCenters_dialog_discardTitle": "Änderungen verwerfen?",
   "diveCenters_dialog_keepEditing": "Weiter bearbeiten",
+  "diveCenters_empty_button": "Erstes Tauchcenter hinzufügen",
   "diveCenters_empty_subtitle": "Fügen Sie Ihre bevorzugten Tauchshops und -anbieter hinzu",
   "diveCenters_empty_title": "Noch keine Tauchcenter",
   "diveCenters_error_generic": "Fehler: {error}",
