--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -871,6 +871,7 @@
   "courses_dialog_deleteTitle": "Delete Course?",
   "courses_dialog_markCompletedMessage": "This will mark the course as completed with today's date. Continue?",
   "courses_dialog_markCompletedTitle": "Mark as Completed?",
+  "courses_empty_button": "Add Your First Training Course",
   "courses_empty_noCompleted": "No completed courses",
   "courses_empty_noInProgress": "No courses in progress",
   "courses_empty_subtitle": "Add your first course to get started",
@@ -1241,6 +1242,7 @@
   "diveCenters_dialog_discardMessage": "You have unsaved changes. Are you sure you want to discard them?",
   "diveCenters_dialog_discardTitle": "Discard Changes?",
   "diveCenters_dialog_keepEditing": "Keep Editing",
+  "diveCenters_empty_button": "Add Your First Dive Center",
   "diveCenters_empty_subtitle": "Add your favorite dive shops and operators",
   "diveCenters_empty_title": "No dive centers yet",
   "diveCenters_error_generic": "Error: {error}",
