--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "¿Eliminar Curso?",
   "courses_dialog_markCompletedMessage": "Esto marcará el curso como completado con la fecha de hoy. ¿Continuar?",
   "courses_dialog_markCompletedTitle": "¿Marcar como Completado?",
+  "courses_empty_button": "Agrega tu primer curso de entrenamiento",
   "courses_empty_noCompleted": "No hay cursos completados",
   "courses_empty_noInProgress": "No hay cursos en progreso",
   "courses_empty_subtitle": "Agrega tu primer curso para comenzar",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "Tienes cambios sin guardar. ¿Estás seguro de que deseas descartarlos?",
   "diveCenters_dialog_discardTitle": "¿Descartar Cambios?",
   "diveCenters_dialog_keepEditing": "Seguir Editando",
+  "diveCenters_empty_button": "Agrega tu primer centro de buceo",
   "diveCenters_empty_subtitle": "Agrega tus tiendas y operadores de buceo favoritos",
   "diveCenters_empty_title": "Aún no hay centros de buceo",
   "diveCenters_error_generic": "Error: {error}",
