--- a/lib/l10n/arb/app_fr.arb
+++ b/lib/l10n/arb/app_fr.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "Supprimer le cours ?",
   "courses_dialog_markCompletedMessage": "Ceci marquera le cours comme terminé à la date d'aujourd'hui. Continuer ?",
   "courses_dialog_markCompletedTitle": "Marquer comme terminé ?",
+  "courses_empty_button": "Ajoutez votre premier cours de formation",
   "courses_empty_noCompleted": "Aucun cours terminé",
   "courses_empty_noInProgress": "Aucun cours en cours",
   "courses_empty_subtitle": "Ajoutez votre premier cours pour commencer",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "Vous avez des modifications non enregistrées. Voulez-vous vraiment les abandonner ?",
   "diveCenters_dialog_discardTitle": "Abandonner les modifications ?",
   "diveCenters_dialog_keepEditing": "Continuer à modifier",
+  "diveCenters_empty_button": "Ajoutez votre premier centre de plongée",
   "diveCenters_empty_subtitle": "Ajoutez vos boutiques de plongée et opérateurs préférés",
   "diveCenters_empty_title": "Aucun centre de plongée pour le moment",
   "diveCenters_error_generic": "Erreur : {error}",
