--- a/lib/l10n/arb/app_he.arb
+++ b/lib/l10n/arb/app_he.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "למחוק קורס?",
   "courses_dialog_markCompletedMessage": "פעולה זו תסמן את הקורס כהושלם עם תאריך היום. להמשיך?",
   "courses_dialog_markCompletedTitle": "לסמן כהושלם?",
+  "courses_empty_button": "הוסף את קורס האימון הראשון שלך",
   "courses_empty_noCompleted": "אין קורסים שהושלמו",
   "courses_empty_noInProgress": "אין קורסים בתהליך",
   "courses_empty_subtitle": "הוסף את הקורס הראשון שלך כדי להתחיל",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "יש לך שינויים שלא נשמרו. האם אתה בטוח שברצונך לבטל אותם?",
   "diveCenters_dialog_discardTitle": "לבטל שינויים?",
   "diveCenters_dialog_keepEditing": "המשך עריכה",
+  "diveCenters_empty_button": "הוסף את מרכז הצלילה הראשון שלך",
   "diveCenters_empty_subtitle": "הוסף את חנויות הצלילה והמפעילים המועדפים עליך",
   "diveCenters_empty_title": "עדיין אין מרכזי צלילה",
   "diveCenters_error_generic": "שגיאה: {error}",
