--- a/lib/l10n/arb/app_hu.arb
+++ b/lib/l10n/arb/app_hu.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "Tanfolyam törlése?",
   "courses_dialog_markCompletedMessage": "Ez befejezettként jelöli meg a tanfolyamot a mai dátummal. Folytatod?",
   "courses_dialog_markCompletedTitle": "Megjelölés befejezettként?",
+  "courses_empty_button": "Első képzési tanfolyam hozzáadása",
   "courses_empty_noCompleted": "Nincsenek befejezett tanfolyamok",
   "courses_empty_noInProgress": "Nincsenek folyamatban lévő tanfolyamok",
   "courses_empty_subtitle": "Add hozzá az első tanfolyamod a kezdéshez",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "Nem mentett módosításaid vannak. Biztosan elveted őket?",
   "diveCenters_dialog_discardTitle": "Módosítások elvetése?",
   "diveCenters_dialog_keepEditing": "Szerkesztés folytatása",
+  "diveCenters_empty_button": "Első búvárközpont hozzáadása",
   "diveCenters_empty_subtitle": "Add hozzá kedvenc búvárüzleteid és szolgáltatóid",
   "diveCenters_empty_title": "Még nincsenek búvárközpontok",
   "diveCenters_error_generic": "Hiba: {error}",
