--- a/lib/l10n/arb/app_it.arb
+++ b/lib/l10n/arb/app_it.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "Eliminare Corso?",
   "courses_dialog_markCompletedMessage": "Questo segnerà il corso come completato con la data odierna. Continuare?",
   "courses_dialog_markCompletedTitle": "Segnare come Completato?",
+  "courses_empty_button": "Aggiungi il tuo primo corso di addestramento",
   "courses_empty_noCompleted": "Nessun corso completato",
   "courses_empty_noInProgress": "Nessun corso in corso",
   "courses_empty_subtitle": "Aggiungi il tuo primo corso per iniziare",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "Hai modifiche non salvate. Sei sicuro di volerle scartare?",
   "diveCenters_dialog_discardTitle": "Scartare Modifiche?",
   "diveCenters_dialog_keepEditing": "Continua Modifica",
+  "diveCenters_empty_button": "Aggiungi il tuo primo centro immersioni",
   "diveCenters_empty_subtitle": "Aggiungi i tuoi diving center e operatori preferiti",
   "diveCenters_empty_title": "Nessun centro immersioni ancora",
   "diveCenters_error_generic": "Errore: {error}",
