--- a/lib/l10n/arb/app_pt.arb
+++ b/lib/l10n/arb/app_pt.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "Excluir Curso?",
   "courses_dialog_markCompletedMessage": "Isso marcará o curso como concluído com a data de hoje. Continuar?",
   "courses_dialog_markCompletedTitle": "Marcar como Concluído?",
+  "courses_empty_button": "Adicione seu primeiro curso de treinamento",
   "courses_empty_noCompleted": "Nenhum curso concluído",
   "courses_empty_noInProgress": "Nenhum curso em andamento",
   "courses_empty_subtitle": "Adicione seu primeiro curso para começar",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "Você tem alterações não salvas. Tem certeza de que deseja descartá-las?",
   "diveCenters_dialog_discardTitle": "Descartar Alterações?",
   "diveCenters_dialog_keepEditing": "Continuar Editando",
+  "diveCenters_empty_button": "Adicione seu primeiro centro de mergulho",
   "diveCenters_empty_subtitle": "Adicione suas lojas e operadores de mergulho favoritos",
   "diveCenters_empty_title": "Nenhum centro de mergulho ainda",
   "diveCenters_error_generic": "Erro: {error}",
