--- a/lib/l10n/arb/app_nl.arb
+++ b/lib/l10n/arb/app_nl.arb
@@ -373,6 +373,7 @@
   "courses_dialog_deleteTitle": "Cursus verwijderen?",
   "courses_dialog_markCompletedMessage": "Dit markeert de cursus als voltooid met de datum van vandaag. Doorgaan?",
   "courses_dialog_markCompletedTitle": "Markeren als voltooid?",
+  "courses_empty_button": "Voeg je eerste trainingscursus toe",
   "courses_empty_noCompleted": "Geen voltooide cursussen",
   "courses_empty_noInProgress": "Geen cursussen bezig",
   "courses_empty_subtitle": "Voeg je eerste cursus toe om te beginnen",
@@ -562,6 +563,7 @@
   "diveCenters_dialog_discardMessage": "Je hebt niet-opgeslagen wijzigingen. Weet je zeker dat je deze wilt verwerpen?",
   "diveCenters_dialog_discardTitle": "Wijzigingen verwerpen?",
   "diveCenters_dialog_keepEditing": "Doorgaan met bewerken",
+  "diveCenters_empty_button": "Voeg je eerste duikcentrum toe",
   "diveCenters_empty_subtitle": "Voeg je favoriete duikwinkels en operators toe",
   "diveCenters_empty_title": "Nog geen duikcentra",
   "diveCenters_error_generic": "Fout: {error}",
